# tenthai

./: CHANGELOG.md  DEVELOPER.md  LIMITS.md  MANIFESTO.md  METHODOLOGY.md  README.es.md  README.md  WHITEPAPER.md  pyproject.toml  requirements-dev.txt  setup
.github/workflows/: test.yml
docs/: cfi-spec.md  demo-job.html  demo.es.html  demo.html
docs/superpowers/plans/: 2026-05-02-henge-v0.6-master.md  2026-05-02-henge-v0.6-phase-0-prep.md  2026-05-02-henge-v0.6-phase-1-providers.md  2026-05-02-henge-v0.6-phase-2-frames.md  2026-05-02-henge-v0.6-phase-3-scoping.md
examples/: demo_render.py
henge/: agents.py  consensus.py  embed.py  meta_frame.py  pricing.py  scoping.py  server.py  storage.py  updater.py  viz.py
henge/prompts/: 01-empirical.md  02-historical.md  03-first-principles.md  04-analogical.md  05-systemic.md  06-ethical.md  07-soft-contrarian.md  08-radical-optimist.md  09-pre-mortem.md  10-tenth-man-steelman.md  10-tenth-man.md
henge/providers/: openai_provider.py  registry.py
tenthai/: consensus.py  server.py  viz.py
tests/: conftest.py  test_critical.py  test_meta_frame.py  test_provider_registry.py  test_provider_smoke.py  test_smoke.py
