[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "henge-mcp"
version = "0.5.0"
description = "Structured Dissent Protocol — 9 cognitive frames + 1 mandatory steel-man dissenter."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "ChrisPiz" },
]
keywords = ["mcp", "llm", "consensus", "dissent", "claude", "anthropic"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "mcp>=1.0.0",
  "anthropic>=0.40.0",
  "openai>=1.50.0",
  "voyageai>=0.3.0",
  "scikit-learn>=1.5.0",
  "scipy>=1.13.0",
  "numpy>=1.26.0",
  "plotly>=5.20.0",
  "python-dotenv>=1.0.0",
]

[project.scripts]
henge = "henge.server:main"

[project.urls]
Homepage = "https://github.com/ChrisPiz/Henge"
Repository = "https://github.com/ChrisPiz/Henge"
Demo = "https://chrispiz.github.io/Henge/demo.html"

[tool.setuptools.packages.find]
include = ["henge*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.setuptools.package-data]
henge = ["prompts/*.md", "assets/*"]
